# vz-ai-pod

./: NEW UI Wireup.html  index (3).html
Ui For Demo(react)/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Ui For Demo(react)/src/: main.tsx  router.ts
Ui For Demo(react)/src/components/: AIStudioPanel.tsx  AssistantContent.tsx  ContractDocument.tsx  DocumentPanel.tsx  RedlineContent.tsx
Ui For Demo(react)/src/routes/: index.tsx
Ui For Demo(react)/src/styles/: app.css
papp-ai-docs/: compare_docx.py  d365_api.py  function_app.py  main.py  pyproject.toml  requirements.txt
vz-pod-1/: index.html  package-lock.json  package.json  vite.config.ts
vz-pod-1/src/: main.tsx  router.ts  styles.css
vz-pod-1/src/assets/new-ui/: index.html
vz-pod-1/src/assets/summaries/: doc_1.html  doc_2.html  doc_diff.html  index_ai_1.html
vz-pod-1/src/components/: AIAnalysisButton.tsx  AISummary.tsx  ChatPanel.tsx  ContractReview.tsx  contract_analyzer.tsx
vz-pod-1/src/lib/: geminiAI.ts
vz-pod-1/src/prompts/: contract_prompts.ts
vz-pod-1/src/routes/: __root.tsx  index.tsx
